--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ yarn-error.log*
 # misc
 .DS_Store
 Thumbs.db
+
+# Keep folder, ignore files
+apps/web/public/uploads/*
+!apps/web/public/uploads/.gitkeep
+
