--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,7 +1,10 @@
 ﻿{
-  "extends": ["next/core-web-vitals"],
+  "extends": "next/core-web-vitals",
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/ban-ts-comment": "off"
+    "@typescript-eslint/no-explicit-any": ["error", {
+      "ignoreRestArgs": true,
+      "ignoreParameters": true,
+      "ignoreProperties": true
+    }]
   }
 }
