--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "iron-session": "^8.0.4",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
+    "nodemailer": "^7.0.6",
     "qrcode": "1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
