--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.895.0",
     "@aws-sdk/s3-request-presigner": "3.895.0",
+    "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "iron-session": "^8.0.4",
     "next": "15.5.4",
