--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "iron-session": "^8.0.4",
+    "lightweight-charts": "^5.0.8",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^7.0.6",
