--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.895.0",
+    "@prisma/client": "^6.16.2",
     "@aws-sdk/s3-request-presigner": "3.895.0",
     "@heroicons/react": "^2.2.0",
     "@types/nodemailer": "^7.0.1",
@@ -46,6 +47,7 @@
     "eslint": "9.36.0",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "4.1.13",
+    "prisma": "^6.16.2",
     "tsx": "4.20.5",
     "typescript": "5.9.2"
   }
