Fix Prisma schema and Vercel deployment configuration
- Fixed Prisma schema validation error by adding postgresqlExtensions
- Updated database configuration from SQLite to PostgreSQL
- Added comprehensive Vercel deployment guides and reports
- Updated environment variables templates
- Added production database testing scripts
- Enhanced package.json with database management scripts

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -11,5 +11,10 @@
     "env": {
       "NODE_ENV": "production"
     }
+  },
+  "functions": {
+    "apps/web/src/app/api/**/*.ts": {
+      "maxDuration": 30
+    }
   }
 }
