--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,11 @@
     "check:prisma": "pnpm dlx prisma validate",
     "check:health": "tsx scripts/preflight.ts",
     "check:build": "next build",
-    "check:all": "pnpm -s check:types && pnpm -s check:lint && pnpm -s check:prisma && pnpm -s check:health && pnpm -s check:build"
+    "check:all": "pnpm -s check:types && pnpm -s check:lint && pnpm -s check:prisma && pnpm -s check:health && pnpm -s check:build",
+    "db:test": "node scripts/test-production-db.js",
+    "db:migrate": "prisma migrate deploy",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.895.0",
