Fix Vercel functions pattern in vercel.json
- Fixed functions pattern from 'apps/web/src/app/api/**/*.ts' to 'src/app/api/**/*.ts'
- This resolves the Vercel build error about unmatched function patterns
- API routes are correctly located in src/app/api/ directory

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -13,7 +13,7 @@
     }
   },
   "functions": {
-    "apps/web/src/app/api/**/*.ts": {
+    "src/app/api/**/*.ts": {
       "maxDuration": 30
     }
   }
