Improve authentication system and session handling
- Enhanced session configuration with maxAge for better cookie management
- Added authentication testing script for debugging 401 errors
- Created comprehensive authentication fix report
- Added auth:test script to package.json for easy testing
- Improved session options for production environment

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,8 @@
     "db:test": "node scripts/test-production-db.js",
     "db:migrate": "prisma migrate deploy",
     "db:generate": "prisma generate",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "auth:test": "node scripts/test-authentication.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.895.0",
