--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -39,7 +39,9 @@
       }
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
     ],
     "scheme": "globalhedgeai"
   }
