Fix critical application error and improve Vercel deployment
- Added next.config.js with proper configuration
- Fixed vercel.json with rewrites for locale handling
- Added next-env.d.ts for TypeScript support
- Improved middleware and routing configuration
- Fixed potential build issues causing Application error

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -16,5 +16,11 @@
     "src/app/api/**/*.ts": {
       "maxDuration": 30
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/((?!api|_next|icons|uploads|favicon.ico|sw.js|manifest.json|.*\\..*).*)",
+      "destination": "/en/$1"
+    }
+  ]
 }
