--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,9 +50,11 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "19.1.13",
     "@types/react-dom": "19.1.9",
+    "autoprefixer": "^10.4.20",
     "dotenv": "17.2.2",
     "eslint": "9.36.0",
     "eslint-config-next": "15.5.4",
+    "postcss": "^8.4.49",
     "tailwindcss": "4.1.13",
     "tsx": "4.20.5",
     "typescript": "5.9.2"
