--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -55,7 +55,7 @@
     "eslint": "9.36.0",
     "eslint-config-next": "15.5.4",
     "postcss": "^8.4.49",
-    "tailwindcss": "4.1.13",
+    "tailwindcss": "^3.4.0",
     "tsx": "4.20.5",
     "typescript": "5.9.2"
   }
