Simplify Vercel configuration for successful deployment
- Simplified vercel.json to minimal required settings
- Removed complex rewrites, headers, and function configurations
- Simplified next.config.js to basic Prisma external packages only
- Simplified tailwind.config.js to basic configuration
- Removed all complex configurations that might cause build failures
- Focus on getting basic build working first

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,26 +1,5 @@
 {
-  "buildCommand": "npx prisma generate && npm run build",
-  "outputDirectory": ".next",
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps",
-  "devCommand": "npm run dev",
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    }
-  },
-  "functions": {
-    "src/app/api/**/*.ts": {
-      "maxDuration": 30
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/((?!api|_next|icons|uploads|favicon.ico|sw.js|manifest.json|.*\\..*).*)",
-      "destination": "/en/$1"
-    }
-  ]
+  "buildCommand": "npx prisma generate && npm run build"
 }
