إصلاح شامل لجميع المشاكل: نظام الترجمة SVG pattern EAS Project ID مكتبات React Native معالجة الأخطاء الاستجابة

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -35,7 +35,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "your-project-id"
+        "projectId": "global-hedge-ai-mobile-app"
       }
     },
     "plugins": [
