--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -28,12 +28,12 @@
     "expo-web-browser": "^15.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-gesture-handler": "^2.28.0",
+    "react-native-gesture-handler": "~2.17.1",
     "react-native-paper": "^5.14.5",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-reanimated": "^4.1.2",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0",
+    "react-native-reanimated": "~3.10.8",
+    "react-native-safe-area-context": "5.0.4",
+    "react-native-screens": "3.32.0",
     "react-native-svg": "^15.12.1",
     "react-native-vector-icons": "^10.3.0"
   },
